fixed safari form issue by adding inline-block and changing width, header alignment and size more responsive

--- a/public/styles.css
+++ b/public/styles.css
@@ -324,12 +324,12 @@ img {
     --mainFont: 'Merriweather', serif;
     /* sizes */
     --movieWidth: 265px;
-    --headerHeight: 69px;
+    --headerHeight: 65px;
     --headerMargin: calc(var(--headerHeight) + var(--subHeaderHeight));
     --subHeaderHeight: 30px;
     --paddingGap: 30px;
     --formWidth: 95%;
-    --subHeadingMargin: 8px;
+    --subHeadingMargin: 4px;
 }
 
 /* #endregion - variables */
@@ -445,7 +445,7 @@ header {
     background-color: var(--darkAccent);
 }
 
-.sort-menu .hover-animation::after,
+.dropdown-menu .hover-animation::after,
 .trending-button .hover-animation::after {
     background-color: var(--midAccent);
 }
@@ -482,7 +482,7 @@ header {
 }
 
 .trending-button .hover-animation,
-.sort-menu .hover-animation {
+.dropdown-menu .hover-animation {
     /* re-define colors */
     --gradientBaseVar: var(--midAccent);
     --gradientChangeVar: var(--lightAccent);
@@ -730,7 +730,7 @@ a:focus {
 }
 
 .fieldset-container {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     align-items: center;
     height: calc(100vh - ((var(--headerHeight) * 2) + 65px));
@@ -770,7 +770,7 @@ fieldset {
     flex-wrap: wrap;
     column-gap: 5px;
     color: var(--lightAccent);
-    width: 100%;
+    width: 97%;
     height: fit-content;
     justify-content: flex-start;
     margin-bottom: 10px;
@@ -853,19 +853,19 @@ input[type="radio"] {
     border-top: 1px solid var(--lightAccent);
 }
 
-.sort-menu {
+.dropdown-menu {
     background: var(--darkNeutral);
     height: 0.8rem;
     text-align: end;
     margin: 10px 0;
 }
 
-.sort-menu select {
+.dropdown-menu select {
     color: var(--midAccent);
     text-align: center;
 }
 
-.sort-menu:hover select {
+.dropdown-menu:hover select {
     color: var(--lightAccent);
 }
 
@@ -922,7 +922,13 @@ footer .copyright {
 
 /* #region - media queries */
 
-@media(max-width: 635px) {
+@media(max-width: 650px) {
+
+    .heading-container {
+        align-items: center;
+        justify-content: center;
+    }
+
     header figure h2 {
         display: none;
     }
@@ -982,6 +988,11 @@ footer .copyright {
 }
 
 @media(max-width: 335px) {
+
+    header h1 {
+        font-size: 9vw;
+    }
+
     .form-nav a {
         font-size: 0.8rem;
     }
